<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.superkeychain.keychain.activity.SignUp">

    <RelativeLayout
        android:id="@+id/sky_blue_banner"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/sky_blue">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="0dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_action_previous_item" />

            <TextView
                android:id="@+id/tv_back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/sign_up_back"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/sign_up_banner"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_ets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sky_blue_banner"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:elegantTextHeight="true"
            android:hint="@string/sign_up_username_hint"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_hint" />

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_marginTop="1dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/sign_in_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="@color/gray_hint" />

            <CheckBox
                android:id="@+id/cb_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/et_password"
                android:layout_centerVertical="true"
                android:checked="false" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_ets">

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:checked="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_contract_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/sign_up_contract_pre"
                android:textColor="@color/dark_gray"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/tv_contract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_contract_pre"
                android:paddingLeft="2dp"
                android:text="@string/sign_up_contract"
                android:textColor="@color/sky_blue"
                android:textSize="10dp" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_ets"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/dark_gray"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/sign_up_commit"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>
