<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/logo"
            app:riv_border_color="@color/dark_gray"
            app:riv_border_width="1dip"
            app:riv_corner_radius="30dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            app:riv_tile_mode="repeat" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_logo"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:elegantTextHeight="true"
            android:hint="@string/sign_in_username_hint"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_hint" />

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_marginTop="1dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:elegantTextHeight="true"
                android:ems="10"
                android:hint="@string/sign_in_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="@color/gray_hint" />

            <CheckBox
                android:id="@+id/cb_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/et_password"
                android:layout_centerVertical="true"
                android:checked="false" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/dark_gray"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/sign_in_commit"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/sign_in_sign_up"
            android:textColor="@color/sky_blue"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/sign_in_language"
            android:textColor="@color/sky_blue"
            android:textSize="15dp" />
    </RelativeLayout>


</RelativeLayout>
